[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/ai_assist/ui/generate_images/asset_viewer.gd" type="Script" id=1]

[node name="AssetViewer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 400 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Toolbar" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 40.0

[node name="Back" type="Button" parent="Toolbar"]
unique_name_in_owner = true
margin_top = 10.0
margin_right = 68.0
margin_bottom = 30.0
size_flags_vertical = 4
text = " Go Back"

[node name="Space" type="Control" parent="Toolbar"]
margin_left = 72.0
margin_right = 848.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="MaskPen" type="HBoxContainer" parent="Toolbar"]
unique_name_in_owner = true
visible = false
margin_left = 244.0
margin_right = 744.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 0 )

[node name="Label" type="Label" parent="Toolbar/MaskPen"]
margin_top = 13.0
margin_right = 54.0
margin_bottom = 27.0
text = "Pen Size"

[node name="PenSize" type="HSlider" parent="Toolbar/MaskPen"]
unique_name_in_owner = true
margin_left = 58.0
margin_right = 265.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 50.0
value = 25.0

[node name="EraseMode" type="CheckButton" parent="Toolbar/MaskPen"]
unique_name_in_owner = true
margin_left = 269.0
margin_right = 423.0
margin_bottom = 40.0
text = "Erase Mode"

[node name="MaskClear" type="Button" parent="Toolbar/MaskPen"]
margin_left = 427.0
margin_top = 10.0
margin_right = 492.0
margin_bottom = 30.0
size_flags_vertical = 6
text = "Clear All"

[node name="VSeparator" type="VSeparator" parent="Toolbar/MaskPen"]
margin_left = 496.0
margin_right = 500.0
margin_bottom = 40.0

[node name="ToggleMasking" type="CheckButton" parent="Toolbar"]
unique_name_in_owner = true
margin_left = 852.0
margin_right = 1024.0
margin_bottom = 40.0
size_flags_horizontal = 4
text = "Apply Masking"

[node name="Contents" type="HBoxContainer" parent="."]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_vertical = 3

[node name="Previous" type="Button" parent="Contents"]
unique_name_in_owner = true
margin_top = 246.0
margin_right = 40.0
margin_bottom = 286.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
icon_align = 1

[node name="VBox" type="VBoxContainer" parent="Contents"]
margin_left = 44.0
margin_right = 980.0
margin_bottom = 532.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="Contents/VBox"]
margin_right = 936.0
margin_bottom = 532.0
size_flags_vertical = 3

[node name="Image" type="TextureRect" parent="Contents/VBox/Panel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
size_flags_horizontal = 3
expand = true
stretch_mode = 6

[node name="MaskRatio" type="AspectRatioContainer" parent="Contents/VBox/Panel/Image"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MaskAnchor" type="Control" parent="Contents/VBox/Panel/Image/MaskRatio"]
unique_name_in_owner = true
margin_left = 202.0
margin_right = 734.0
margin_bottom = 532.0

[node name="MaskContainer" type="ViewportContainer" parent="Contents/VBox/Panel/Image/MaskRatio/MaskAnchor"]
unique_name_in_owner = true
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
margin_right = 2.0
margin_bottom = 2.0
stretch = true

[node name="MaskCanvas" type="Viewport" parent="Contents/VBox/Panel/Image/MaskRatio/MaskAnchor/MaskContainer"]
unique_name_in_owner = true
size = Vector2( 2, 2 )
size_override_stretch = true
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 1
render_target_update_mode = 0

[node name="ColorRect" type="ColorRect" parent="Contents/VBox/Panel/Image/MaskRatio/MaskAnchor/MaskContainer/MaskCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MaskDraw" type="TextureRect" parent="Contents/VBox/Panel/Image/MaskRatio/MaskAnchor/MaskContainer/MaskCanvas"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Next" type="Button" parent="Contents"]
unique_name_in_owner = true
margin_left = 984.0
margin_top = 246.0
margin_right = 1024.0
margin_bottom = 286.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
icon_align = 1

[node name="ImageOptions" type="HBoxContainer" parent="."]
margin_left = 383.0
margin_top = 580.0
margin_right = 640.0
margin_bottom = 600.0
size_flags_horizontal = 4

[node name="GenerateVariations" type="Button" parent="ImageOptions"]
unique_name_in_owner = true
visible = false
margin_right = 138.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Generate Variations"

[node name="SaveImage" type="Button" parent="ImageOptions"]
margin_right = 117.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Save Image As..."

[node name="SaveResource" type="Button" parent="ImageOptions"]
margin_left = 121.0
margin_right = 257.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Save Resource As..."

[node name="SaveImageDialog" type="FileDialog" parent="."]
margin_right = 450.0
margin_bottom = 300.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Save Image"
resizable = true
mode_overrides_title = false
filters = PoolStringArray( "*.png" )

[node name="SaveResourceDialog" type="FileDialog" parent="."]
margin_right = 450.0
margin_bottom = 300.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Save Resource"
resizable = true
mode_overrides_title = false
filters = PoolStringArray( "*.tres" )

[connection signal="pressed" from="Toolbar/Back" to="." method="emit_signal" binds= [ "go_back_requested" ]]
[connection signal="pressed" from="Toolbar/Back" to="." method="hide"]
[connection signal="pressed" from="Toolbar/MaskPen/MaskClear" to="." method="clear_mask"]
[connection signal="toggled" from="Toolbar/ToggleMasking" to="." method="_on_ToggleMasking_toggled"]
[connection signal="pressed" from="Contents/Previous" to="." method="_on_Previous_pressed"]
[connection signal="gui_input" from="Contents/VBox/Panel/Image/MaskRatio/MaskAnchor/MaskContainer" to="." method="_on_MaskContainer_gui_input"]
[connection signal="pressed" from="Contents/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="ImageOptions/GenerateVariations" to="." method="_on_GenerateVariations_pressed"]
[connection signal="pressed" from="ImageOptions/SaveImage" to="SaveImageDialog" method="popup_centered"]
[connection signal="pressed" from="ImageOptions/SaveResource" to="SaveResourceDialog" method="popup_centered"]
[connection signal="file_selected" from="SaveImageDialog" to="." method="_on_SaveImageDialog_file_selected"]
[connection signal="file_selected" from="SaveResourceDialog" to="." method="_on_SaveResourceDialog_file_selected"]
